--- a/Saved/Config/WindowsEditor/Engine.ini
+++ b/Saved/Config/WindowsEditor/Engine.ini
@@ -75,3 +75,11 @@ TunnelMulticastEndpoint=
 [/Script/UnrealEd.EditorEngine]
 FlipNormalMapGreenChannel=False
 
+[WindowsApplication.Accessibility]
+StickyKeysHotkey=False
+ToggleKeysHotkey=False
+FilterKeysHotkey=False
+StickyKeysConfirmation=True
+ToggleKeysConfirmation=True
+FilterKeysConfirmation=True
+
